fix: updates to overall site styling in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@
   ::before,
   ::backdrop,
   ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
+    border-color: var(--color-slate-200, currentColor);
   }
 }
 
